Show game state and allow user to submit a guess
* Add controller params check for guess
* Add fake methods in model to allow having a guess submitted
* Add data to view to show game state
* Add cucumber steps for the above

Passing second cucumber test

--- a/app/views/games/_form.html.erb
+++ b/app/views/games/_form.html.erb
@@ -11,7 +11,12 @@
     </div>
   <% end %>
 
+  <div class="guess">
+    <%= f.label :guess %>
+    <%= f.text_field :guess %>
+  </div>
+
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Submit guess" %>
   </div>
 <% end %>
