--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,4 +1,10 @@
 <p id="notice"><%= notice %></p>
 
+<p id="livesleft">You have <%= @game.lives %> lives left </p>
+<p id="guessed_word">Currently guessed word is: <%= @game.word_guessed_so_far.map { |char| char ? char : " _ " }.join %></p>
+<p id="guesses">You have guessed: <%= @game.guesses.join(" ") %></p>
+
+<%= render 'form' %>
+
 <%= link_to 'Edit', edit_game_path(@game) %> |
 <%= link_to 'Back', games_path %>
