Changed finishedstate element to be a div
Chrome didn't like having div's in a p. Also made it look a bit neater

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,6 +1,11 @@
 <p id="notice"><%= notice %></p>
 
-<p id="finishedstate"><% if @game.finished? %><div id="gameover">GAME OVER!</div><div id="winstate"><%= @game.won?? "You won" : "You lost" %></div><% end %></p>
+<div id="finishedstate">
+  <% if @game.finished? %>
+    <div id="gameover">GAME OVER!</div>
+    <div id="winstate"><%= @game.won?? "You won" : "You lost" %></div>
+  <% end %>
+</div>
 <p id="livesleft">You have <%= @game.lives %> lives left </p>
 <p id="guessed_word">Currently guessed word is: <%= @game.word_guessed_so_far.map { |char| char ? char : " _ " }.join %></p>
 <p id="guesses">You have guessed: <%= @game.guesses_array.join(" ") %></p>
