Change guessed_array to guessed_letters

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -8,7 +8,7 @@
 </div>
 <p id="livesremaining">You have <%= pluralize(@game.lives, "life") %> remaining </p>
 <p id="guessed_word">Currently guessed word is: <%= @game.word_guessed_so_far.map { |char| char ? char : " _ " }.join %></p>
-<p id="guesses">You have guessed: <%= @game.guesses_array.join(" ") %></p>
+<p id="guesses">You have guessed: <%= @game.guessed_letters.join(" ") %></p>
 
 <%= render 'guesses/form' %>
 
