--- a/app/views/guesses/_form.html.erb
+++ b/app/views/guesses/_form.html.erb
@@ -1,10 +1,11 @@
 <%= form_for([@game, @game.guesses.build]) do |f| %>
-  <% if @guess and @guess.errors.any? %>
+  <%# with service model, this will be @errors, assigned in controller %>
+  <% if @errors and @errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@guess.errors.count, "error") %> prohibited this guess from being saved:</h2>
+      <h2><%= pluralize(@errors.count, "error") %> prohibited this guess from being saved:</h2>
 
       <ul>
-      <% @guess.errors.full_messages.each do |message| %>
+      <% @errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
       </ul>
