--- a/app/views/games/_form.html.erb
+++ b/app/views/games/_form.html.erb
@@ -1,10 +1,10 @@
 <%= form_for(@game) do |f| %>
-  <% if @errors and @errors.any? %>
+  <% if @game.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@errors.count, "error") %> prohibited this game from being saved:</h2>
+      <h2><%= pluralize(@game.errors.count, "error") %> prohibited this game from being saved:</h2>
 
       <ul>
-      <% @errors.full_messages.each do |message| %>
+      <% @game.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
       </ul>
