Remove default word from game model, pass in wordlist_name to createGame

--- a/app/views/games/_form.html.erb
+++ b/app/views/games/_form.html.erb
@@ -12,6 +12,10 @@
   <% end %>
 
   <div class="field">
+    <%= f.label :wordlist_name, "Wordlist Name" %>
+    <%= f.text_field :wordlist_name %>
+  </div>
+  <div class="field">
     <%= f.label :starting_lives, "Starting Lives" %>
     <%= f.text_field :starting_lives %>
   </div>
