Add wordlists as a select in the new game form
Probably should do that as a helper? then we won't have it in the spec
file as well..

--- a/app/views/games/_form.html.erb
+++ b/app/views/games/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= f.label :wordlist_name, "Wordlist Name" %>
-    <%= f.text_field :wordlist_name %>
+    <%= f.select :wordlist_name, @wordlists %>
   </div>
   <div class="field">
     <%= f.label :starting_lives, "Starting Lives" %>
