Add locales for new game page

--- a/app/views/games/_form.html.erb
+++ b/app/views/games/_form.html.erb
@@ -12,11 +12,11 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :wordlist_name, "Wordlist Name" %>
+    <%= f.label :wordlist_name %>
     <%= f.select :wordlist_name, @wordlists %>
   </div>
   <div class="field">
-    <%= f.label :starting_lives, "Starting Lives" %>
+    <%= f.label :starting_lives %>
     <%= f.text_field :starting_lives %>
   </div>
   <div class="actions">
