--- a/app/views/word_lists/index.html.erb
+++ b/app/views/word_lists/index.html.erb
@@ -1,11 +1,11 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Word Lists</h1>
+<h1><%= t(:Listing_things, things: WordList.model_name.human(count: 2)) %></h1>
 
 <table>
   <thead>
     <tr>
-      <th>Name</th>
+      <th><%= WordList.human_attribute_name(:name) %></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -14,9 +14,9 @@
     <% @word_lists.each do |word_list| %>
       <tr>
         <td><%= word_list.name %></td>
-        <td><%= link_to 'Show', word_list %></td>
-        <td><%= link_to 'Edit', edit_word_list_path(word_list) %></td>
-        <td><%= link_to 'Destroy', word_list, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to t(:Show), word_list %></td>
+        <td><%= link_to t(:Edit), edit_word_list_path(word_list) %></td>
+        <td><%= link_to t(:Destroy), word_list, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -24,5 +24,5 @@
 
 <br>
 
-<%= link_to 'New Word list', new_word_list_path %>
-<%= link_to 'Back', root_path %>
+<%= link_to t(:New_thing, thing: WordList.model_name.human), new_word_list_path %>
+<%= link_to t(:Back), root_path %>
