--- a/app/views/word_lists/edit.html.erb
+++ b/app/views/word_lists/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Word List</h1>
+<h1><%= t(:Editing_thing, thing: WordList.model_name.human) %></h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @word_list %> |
-<%= link_to 'Back', word_lists_path %>
+<%= link_to t(:Show), @word_list %> |
+<%= link_to t(:Back), word_lists_path %>
