Pull wordlist_names into a helper

--- a/app/views/games/_form.html.erb
+++ b/app/views/games/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= f.label :wordlist_name %>
-    <%= f.select :wordlist_name, @wordlists %>
+    <%= f.select :wordlist_name, wordlist_names %>
   </div>
   <div class="field">
     <%= f.label :starting_lives %>
