--- a/app/views/games/_form.html.erb
+++ b/app/views/games/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for(@game) do |f| %>
   <% if @game.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@game.errors.count, "error") %> prohibited this game from being saved:</h2>
+      <h2><%= t(:errors_prohibited_this_thing_from_being_saved, errors: t(:error, count: @game.errors.count), thing: Game.model_name.human.downcase) %>:</h2>
 
       <ul>
       <% @game.errors.full_messages.each do |message| %>
