--- a/app/views/guesses/_form.html.erb
+++ b/app/views/guesses/_form.html.erb
@@ -2,7 +2,7 @@
   <%# with service model, this will be @errors, assigned in controller %>
   <% if @errors and @errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@errors.count, "error") %> prohibited this guess from being saved:</h2>
+      <h2><%= t(:errors_prohibited_this_thing_from_being_saved, errors: t(:error, count: @errors.count), thing: Guess.model_name.human.downcase) %>:</h2>
 
       <ul>
       <% @errors.full_messages.each do |message| %>
