--- a/app/views/words/_form.html.erb
+++ b/app/views/words/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for([@word_list, @word]) do |f| %>
   <% if @word.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@word.errors.count, "error") %> prohibited this word from being saved:</h2>
+      <h2><%= t(:errors_prohibited_this_thing_from_being_saved, errors: t(:error, count: @word.errors.count), thing: Word.model_name.human.downcase) %>:</h2>
 
       <ul>
       <% @word.errors.full_messages.each do |message| %>
