--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -6,7 +6,7 @@
     <div id="winstate"><%= @game.won?? t(:You_won) : t(:You_lost) %></div>
   <% end %>
 </div>
-<p id="livesremaining"><%= t(:You_have_lives_remaining, lives: pluralize(@game.lives, t(:life))) %></p>
+<p id="livesremaining"><%= t(:You_have_lives_remaining, lives: t(:life, count: @game.lives)) %></p>
 <p id="guessed_word"><%= t(:Currently_guessed_word_is, guessed_word: guessed_word(@game)) %></p>
 <p id="guesses"><%= t(:You_have_guessed, guessed_letters: guessed_letters(@game)) %></p>
 
