--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -2,21 +2,21 @@
 
 <div id="finishedstate">
   <% if @game.finished? %>
-    <div id="gameover"><%= t(:GAME_OVER) %></div>
-    <div id="winstate"><%= @game.won?? t(:You_won) : t(:You_lost) %></div>
+    <div id="gameover"><%= t("GAME OVER!") %></div>
+    <div id="winstate"><%= @game.won?? t("You won") : t("You lost") %></div>
   <% end %>
 </div>
-<p id="livesremaining"><%= t(:You_have_lives_remaining, lives: t(:life, count: @game.lives)) %></p>
-<p id="guessed_word"><%= t(:Currently_guessed_word_is, guessed_word: guessed_word(@game)) %></p>
-<p id="guesses"><%= t(:You_have_guessed, guessed_letters: guessed_letters(@game)) %></p>
+<p id="livesremaining"><%= t("You have %{lives} remaining", lives: t(:life, count: @game.lives)) %></p>
+<p id="guessed_word"><%= t("Currently guessed word is: %{guessed_word}", guessed_word: guessed_word(@game)) %></p>
+<p id="guesses"><%= t("You have guessed: %{guessed_letters}", guessed_letters: guessed_letters(@game)) %></p>
 
 <% if Rails.env.development? %>
   <div id="debug">
-    <%= t(:DEBUG_MODE) %>
-    <p id="word"><%= t(:The_word_is, word: @game.word) %></p>
+    <%= t("DEBUG MODE") %>
+    <p id="word"><%= t("The word is: %{word}", word: @game.word) %></p>
   </div>
 <% end %>
 
 <%= render 'guesses/form' %>
 
-<%= link_to t(:Back), games_path %>
+<%= link_to t("Back"), games_path %>
