--- a/app/views/words/_show.html.erb
+++ b/app/views/words/_show.html.erb
@@ -1,4 +1,4 @@
 <tr>
   <td><%= word.word %></td>
-  <td><%= link_to t(:Destroy), word_list_word_path(word.word_list_id, word), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+  <td><%= link_to t("Destroy"), word_list_word_path(word.word_list_id, word), method: :delete, data: { confirm: 'Are you sure?' } %></td>
 </tr>
