--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,5 +1,5 @@
-<h1><%= t(:New_thing, thing: Game.model_name.human) %></h1>
+<h1><%= t("New %{thing}", thing: Game.model_name.human) %></h1>
 
 <%= render 'form' %>
 
-<%= link_to t(:Back), games_path %>
+<%= link_to t("Back"), games_path %>
