--- a/app/views/guesses/_form.html.erb
+++ b/app/views/guesses/_form.html.erb
@@ -1,8 +1,8 @@
 <%= form_for([@game, @game.guesses.build]) do |f| %>
   <%# with service model, this will be @errors, assigned in controller %>
   <% if @errors and @errors.any? %>
-    <div id="error_explanation">
-      <h2><%= t(:errors_prohibited_this_thing_from_being_saved, errors: t(:error, count: @errors.count), thing: Guess.model_name.human.downcase) %>:</h2>
+    <div id="error explanation">
+      <h2><%= t("%{errors} prohibited this %{thing} from being saved", errors: t(:error, count: @errors.count), thing: Guess.model_name.human.downcase) %>:</h2>
 
       <ul>
       <% @errors.full_messages.each do |message| %>
