--- a/app/views/word_lists/new.html.erb
+++ b/app/views/word_lists/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Word List</h1>
+<h1><%= t("New %{thing}", thing: WordList.model_name.human) %></h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', word_lists_path %>
+<%= link_to t("Back"), word_lists_path %>
