--- a/app/views/words/_form.html.erb
+++ b/app/views/words/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_for([@word_list, @word]) do |f| %>
   <% if @word.errors.any? %>
-    <div id="error explanation">
+    <div id="error_explanation">
       <h2><%= t("%{errors} prohibited this %{thing} from being saved", errors: t(:error, count: @word.errors.count), thing: Word.model_name.human.downcase) %>:</h2>
 
       <ul>
