Add max length for guess

--- a/app/views/guesses/_form.html.erb
+++ b/app/views/guesses/_form.html.erb
@@ -14,7 +14,7 @@
 
   <div class="guess">
     <%= f.label :guess %>
-    <%= f.text_field :guess %>
+    <%= f.text_field :guess, maxlength: 1 %>
   </div>
 
   <div class="actions">
